# refind-palette-builder

./: .gitignore  example.ini  main.py  pyproject.toml  readme.md
refind_palette/: __main__.py  generator.py  palette.py  working_directory.py
